--- a/bluetoothChatCore/build.gradle
+++ b/bluetoothChatCore/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile "com.android.support:appcompat-v7:$support_library_version"
-    compile 'com.alibaba:fastjson:1.1.63.android'
+    compile "com.android.support:appcompat-v7:$supportLibraryVersion"
+    compile 'com.alibaba:fastjson:1.1.67.android'
     testCompile 'junit:junit:4.12'
 }
