--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.2.2'
+        classpath 'com.android.tools.build:gradle:7.3.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -25,8 +25,9 @@ task clean(type: Delete) {
 }
 
 ext {
-    compileSdkVersion = 32
-    buildToolsVersion = "33.0.0"
+    compileSdkVersion = 33
     minSdkVersion = 18
     targetSdkVersion = 31
+    appcompatVersion = "1.5.1"
+    constraintLayoutVersion = "2.1.4"
 }
