--- a/bluetoothChatClient/src/main/AndroidManifest.xml
+++ b/bluetoothChatClient/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.bluetoothchatclient">
 
-    <!-- Android 12以下才需要定位权限， Android 9以下官方建议申请ACCESS_COARSE_LOCATION -->
+    <!-- Android 12以下才需要定位权限 -->
     <uses-permission
         android:name="android.permission.ACCESS_COARSE_LOCATION"
         android:maxSdkVersion="30" />
