--- a/bluetoothChatServer/build.gradle
+++ b/bluetoothChatServer/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion rootProject.ext.compileSdkVersion
+    compileSdk rootProject.ext.compileSdkVersion
 
     defaultConfig {
         applicationId "com.example.bluetoothchatserver"
@@ -23,9 +23,9 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    testImplementation "junit:junit:$rootProject.ext.ext_junit"
+    androidTestImplementation "androidx.test.ext:junit:$rootProject.ext.junit"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$rootProject.ext.espresso"
     implementation "androidx.appcompat:appcompat:$rootProject.ext.appcompatVersion"
     implementation "androidx.constraintlayout:constraintlayout:$rootProject.ext.constraintLayoutVersion"
     implementation project(':bluetoothChatCore')
