--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.3.1'
+        classpath 'com.android.tools.build:gradle:7.4.2'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -20,14 +20,17 @@ allprojects {
     }
 }
 
-task clean(type: Delete) {
+tasks.register('clean', Delete) {
     delete rootProject.buildDir
 }
 
 ext {
     compileSdkVersion = 33
     minSdkVersion = 18
-    targetSdkVersion = 31
-    appcompatVersion = "1.5.1"
+    targetSdkVersion = 33
+    appcompatVersion = "1.6.1"
     constraintLayoutVersion = "2.1.4"
+    ext_junit   = "4.13.2"
+    junit   = "1.1.5"
+    espresso    = "3.5.1"
 }
